引入es6模块化，使用es6新特性

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>攻克REACT</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <h1 id="r"></h1>
+    <h1 id="hello"></h1><hr/>
+    <section id="john"></section><hr/>
+    <section id="childrenlist"></section><hr/>
     <script src="build/main.js"></script>
 </body>
 </html>
