--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,15 @@
 <html>
-  <link rel="stylesheet" type="text/css" href="main.css">
-  <title>React-Babel-Webpack Boileplate</title>
-  <body>
+
+<head>
+    <title>React Practice</title>
+    <link rel="shortcut icon" href="http://reactjs.cn/react/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+
+<body>
+    <div id="hello"></div>
     <div id="range"></div>
     <script type="text/javascript" src="bundle.js"></script>
-  </body>
+</body>
+
 </html>
