添加example组件并优化

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="hello"></div>
     <div id="range"></div>
+    <div id="example"></div>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
 
