--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <div id="hello"></div>
     <div id="range"></div>
     <div id="example"></div>
+    <div id="timer"></div>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
 
