--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <div id="range"></div>
     <div id="example"></div>
     <div id="timer"></div>
+    <div id="todo"></div>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
 
