--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <div id="example"></div>
     <div id="timer"></div>
     <div id="todo"></div>
+    <div id="output"></div>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
 
