--- a/app/index.html
+++ b/app/index.html
@@ -3,16 +3,10 @@
 <head>
     <title>React Practice</title>
     <link rel="shortcut icon" href="http://reactjs.cn/react/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-    <div id="hello"></div>
-    <div id="range"></div>
-    <div id="example"></div>
-    <div id="timer"></div>
-    <div id="todo"></div>
-    <div id="output"></div>
+    <div id="app"></div>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
 
