引入react-router，并美化界面

--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,13 @@
 
 <head>
     <title>React Practice</title>
+    <meta charset="utf-8"/>
     <link rel="shortcut icon" href="http://reactjs.cn/react/favicon.ico">
 </head>
 
 <body>
-    <div id="app"></div>
-    <script type="text/javascript" src="bundle.js"></script>
+    <div id="init" />
+    <script src="bundle.js"></script>
 </body>
 
 </html>
