--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>React Practice</title>
+    <title>React</title>
     <meta charset="utf-8"/>
     <link rel="shortcut icon" href="http://reactjs.cn/react/favicon.ico">
 </head>
